--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "@primer/react-brand-monorepo",
+  "name": "@primer/react-brand",
   "version": "0.0.1",
-  "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
+  "main": "lib/index.js",
+  "module": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "build": "turbo run build",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "turbo run dev --parallel",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "clean": "rm -rf lib",
+    "build:types": "tsc",
+    "build": "npm run clean && node ./esbuild.js && npm run build:types"
   },
   "devDependencies": {
-    "prettier": "^2.5.1",
-    "turbo": "^1.1.2"
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "config": "*",
+    "tsconfig": "*",
+    "typescript": "^4.5.3",
+    "esbuild": "^0.14.21"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "engines": {
     "npm": ">=7.0.0",
@@ -30,5 +34,8 @@
   "bugs": {
     "url": "https://github.com/primer/react-brand/issues"
   },
-  "homepage": "https://github.com/primer/react-brand#readme"
+  "homepage": "https://github.com/primer/react-brand#readme",
+  "files": [
+    "lib"
+  ]
 }
