--- a/package.json
+++ b/package.json
@@ -6,16 +6,26 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "clean": "rm -rf lib",
-    "build:types": "tsc",
-    "build": "npm run clean && node ./esbuild.js && npm run build:types"
+    "build:types": "tsc --project tsconfig.build.json",
+    "build": "npm run clean && node ./esbuild.js && npm run build:types",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.2",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-interactions": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/react": "^6.4.19",
+    "@storybook/testing-library": "^0.0.9",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "config": "*",
-    "tsconfig": "*",
+    "babel-loader": "^8.2.3",
+    "esbuild": "^0.14.21",
+    "postcss": "^8.4.6",
     "typescript": "^4.5.3",
-    "esbuild": "^0.14.21"
+    "webpack": "^4.46.0"
   },
   "peerDependencies": {
     "react": "^17.0.0",
