--- a/.github/workflows/deploy_storybook.yml
+++ b/.github/workflows/deploy_storybook.yml
@@ -27,6 +27,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - run: npm ci
+      - run: npm run build-storybook
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
