--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "build": "npm run clean && ts-node ./esbuild.ts && npm run build:types",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "release": "npm run build && changeset publish"
+    "release": "npm run build && changeset publish",
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'"
   },
+  "prettier": "@github/prettier-config",
   "peerDependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
@@ -37,6 +39,7 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.3",
     "@changesets/cli": "^2.21.0",
+    "@github/prettier-config": "^0.0.4",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-interactions": "^6.4.19",
@@ -47,6 +50,7 @@
     "@types/react-dom": "^17.0.11",
     "esbuild": "^0.14.21",
     "esbuild-css-modules-plugin": "^2.1.6",
+    "prettier": "^2.5.1",
     "storybook-css-modules-preset": "^1.1.1",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.3",
