--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,9 +1,6 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@1.7.0/schema.json",
-  "changelog": [
-    "@changesets/changelog-github",
-    { "repo": "primer/react-brand" }
-  ],
+  "changelog": ["@changesets/changelog-github", {"repo": "primer/react-brand"}],
   "commit": false,
   "fixed": [],
   "linked": [],
