--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "typescript": "^4.5.3",
     "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "^4.46.0"
+  },
+  "dependencies": {
+    "classnames": "^2.3.1"
   }
 }
