--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "esbuild": "^0.14.21",
     "esbuild-css-modules-plugin": "^2.1.6",
     "prettier": "^2.5.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "storybook-css-modules-preset": "^1.1.1",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.3",
