--- a/.github/workflows/deploy_storybook.yml
+++ b/.github/workflows/deploy_storybook.yml
@@ -9,19 +9,20 @@ on:
       - main
 
 jobs:
-  build-and-deploy_job:
+  build_and_deploy:
     name: Build and deploy
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: Setup Node
+      - name: Set up Node
         uses: actions/setup-node@v2
         with:
-          node-version: "14"
+          node-version: '14'
 
       - name: Cache dependencies
         uses: actions/cache@v2
@@ -31,28 +32,30 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - run: npm ci
-      # react is a lib peer-dep so installing these transiently
-      - run: npm i react@v17 react-dom@v17 -D
-      - run: npm run build:storybook
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Build And Deploy
+      - name: Build Storybook
+        run: npm run build:storybook
+
+      - name: Deploy to Azure
+        id: azure-action
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_DEPLOYMENT_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          action: "upload"
-          app_location: "/"
-          output_location: "/storybook-static"
+          action: 'upload'
+          app_location: '/storybook-static'
+          output_location: ''
+          skip_app_build: true
 
-  close_pull_request_job:
-    name: Azure teardown and cleanup
+  clean_up:
+    name: Clean up
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
     runs-on: ubuntu-latest
     steps:
-      - name: Close Pull Request
-        id: closepullrequest
+      - name: Teardown Azure deployment
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_DEPLOYMENT_TOKEN }}
-          action: "close"
+          action: 'close'
