--- a/.github/workflows/deploy_storybook.yml
+++ b/.github/workflows/deploy_storybook.yml
@@ -1,10 +1,8 @@
 name: Deploy Storybook to Azure
 on:
   push:
-    branches:
-      - main
   pull_request:
-    types: [opened, synchronize, reopened, closed]
+    types: [closed]
     branches:
       - main
 
@@ -12,7 +10,7 @@ jobs:
   build_and_deploy:
     name: Build and deploy
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+    if: github.event_name == 'push'
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
