--- a/.github/workflows/deploy_storybook.yml
+++ b/.github/workflows/deploy_storybook.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Build Storybook
         run: npm run build:storybook
 
+      - name: Tmp
+        run: echo $GITHUB_REF_NAME
+
       - name: Set deployment environment
         id: deployment-env
         run: |
