--- a/.github/workflows/deploy_storybook.yml
+++ b/.github/workflows/deploy_storybook.yml
@@ -32,7 +32,15 @@ jobs:
         run: npm run build:storybook
 
       - name: Tmp
-        run: echo $GITHUB_REF_NAME == 'main'
+        run: |
+          echo $GITHUB_REF_NAME
+          echo $GITHUB_REF_NAME == 'main'
+          if [$GITHUB_REF_NAME == 'main']
+          then
+              echo Production
+          else
+              echo Preview
+          fi
 
       - name: Set deployment environment
         id: deployment-env
