--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-interactions": "^6.4.19",
     "@storybook/addon-links": "^6.4.19",
+    "@storybook/builder-webpack5": "^6.4.19",
+    "@storybook/manager-webpack5": "^6.4.19",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
     "@types/react": "^17.0.37",
@@ -51,7 +53,6 @@
     "@types/webpack": "^4.41.25",
     "autoprefixer": "^9.8.8",
     "css-loader": "^5.2.7",
-    "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.7",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.2",
