--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
     "typescript": "^4.5.3",
     "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "^4.46.0"
+  },
+  "dependencies": {
+    "clsx": "^1.1.1"
   }
 }
