--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
   "sideEffects": false,
   "scripts": {
     "clean": "rm -rf lib",
+    "build:css-vars": "ts-node ./scripts/build-css-variables.ts",
     "build:types": "tsc --project tsconfig.build.json",
     "build": "npm run clean && ts-node ./esbuild.ts && npm run build:types",
     "build:storybook": "build-storybook",
     "storybook": "start-storybook -p 6006",
     "release": "npm run build && changeset publish",
-    "format": "prettier --write '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'"
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
+    "lint": "eslint '**/*.{js,ts,tsx,md,mdx}' --max-warnings=0",
+    "lint:fix": "npm run lint -- --fix"
   },
   "prettier": "@github/prettier-config",
   "peerDependencies": {
@@ -40,6 +43,8 @@
     "@changesets/changelog-github": "^0.4.3",
     "@changesets/cli": "^2.21.0",
     "@github/prettier-config": "^0.0.4",
+    "@primer/octicons-react": "^17.0.0",
+    "@primer/primitives": "^7.5.1",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-interactions": "^6.4.19",
@@ -50,6 +55,13 @@
     "@types/react-dom": "^17.0.11",
     "esbuild": "^0.14.21",
     "esbuild-css-modules-plugin": "^2.1.6",
+    "eslint": "7.28.0",
+    "eslint-plugin-github": "4.1.3",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-primer-react": "0.7.0",
+    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-react-hooks": "4.2.0",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
