--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "outDir": "lib",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "plugins": [{"name": "typescript-plugin-css-modules"}]
   },
   "include": ["src/**/*"]
