--- a/package.json
+++ b/package.json
@@ -58,9 +58,6 @@
     "@types/webpack": "^4.41.25",
     "autoprefixer": "^9.8.8",
     "css-loader": "^5.2.7",
-    "postcss": "^8.4.7",
-    "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.4.2",
     "eslint": "7.28.0",
     "eslint-plugin-github": "4.1.3",
     "eslint-plugin-jsx-a11y": "6.4.1",
@@ -68,12 +65,16 @@
     "eslint-plugin-primer-react": "0.7.0",
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
+    "postcss": "^8.4.7",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.4.2",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "storybook-css-modules-preset": "^1.1.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.7",
+    "ts-node": "^10.7.0",
     "typed-css-modules": "^0.7.0",
     "typescript": "^4.5.3",
     "typescript-plugin-css-modules": "^3.4.0",
