--- a/package.json
+++ b/package.json
@@ -24,15 +24,13 @@
     "clean": "rm -rf lib",
     "build:css-vars": "ts-node --skipIgnore ./scripts/build-css-variables.ts",
     "build:types": "tsc --project tsconfig.build.json",
-    "build": "npm run build:css-types && npm run clean && npm run build:css-vars && webpack",
-    "build:storybook": "npm run build:css-vars && build-storybook",
+    "build": "npm run clean && npm run build:css-types && npm run build:css-vars && webpack",
+    "build:storybook": "npm run build && build-storybook",
     "build:css-types": "tcm -p 'src/**/*.css' .",
-    "start": "npm run start:css-types & start-storybook -p 6006",
+    "start": "npm run build && start-storybook -p 6006",
     "start:css-types": "tcm -w -p 'src/**/*.css' .",
     "release": "npm run build && changeset publish",
-    "format": "prettier --write '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
-    "lint": "eslint '**/*.{js,ts,tsx,md,mdx}' --max-warnings=0",
-    "lint:fix": "npm run lint -- --fix"
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'"
   },
   "prettier": "@github/prettier-config",
   "peerDependencies": {
@@ -58,13 +56,6 @@
     "@types/webpack": "^4.41.25",
     "autoprefixer": "^9.8.8",
     "css-loader": "^5.2.7",
-    "eslint": "7.28.0",
-    "eslint-plugin-github": "4.1.3",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "3.4.0",
-    "eslint-plugin-primer-react": "0.7.0",
-    "eslint-plugin-react": "7.24.0",
-    "eslint-plugin-react-hooks": "4.2.0",
     "postcss": "^8.4.7",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.2",
