--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,14 +2,14 @@ name: CI
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
 
 jobs:
-  build:
+  ci:
+    name: Install and run tests
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -30,8 +30,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - run: npm run build
+      - name: Attempt build
+        run: npm run build
 
-      - run: npm run check
+      - name: Verify types
+        run: npm run check
 
-      - run: npm run test
+      - name: Run unit tests
+        run: npm run test
