--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
     "lib"
   ],
   "scripts": {
-    "clean": "rm -rf lib",
     "build:types": "tsc --project tsconfig.build.json",
     "build": "npm run build:css-types && npm run clean && webpack",
     "build:storybook": "build-storybook",
     "build:css-types": "tcm -p 'src/**/*.css' .",
+    "check": "tsc --noEmit",
+    "clean": "rm -rf lib",
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
+    "release": "npm run build && changeset publish",
     "start": "npm run start:css-types & start-storybook -p 6006",
     "start:css-types": "tcm -w -p 'src/**/*.css' .",
-    "release": "npm run build && changeset publish",
-    "format": "prettier --write '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'"
+    "test": "jest"
   },
   "prettier": "@github/prettier-config",
   "peerDependencies": {
@@ -48,11 +50,20 @@
     "@storybook/manager-webpack5": "^6.4.19",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/webpack": "^4.41.25",
     "autoprefixer": "^9.8.8",
     "css-loader": "^5.2.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
+    "jest-axe": "^6.0.0",
     "postcss": "^8.4.7",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.2",
@@ -61,6 +72,7 @@
     "react-dom": "^17.0.2",
     "storybook-css-modules-preset": "^1.1.1",
     "style-loader": "^3.3.1",
+    "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.7",
     "typed-css-modules": "^0.7.0",
     "typescript": "^4.5.3",
