Add ThemeProvider and build step for css variables (#9)
* add ThemeProvider - no tests

* fix type defs for Primitives

* fix ci

* fix formatting

* add jsdoc annotation to themeprovider

* restore extension to built css file

* add ts-node back as a devDep

* remove ESLint configs for now

* tidy up

* ad-hoc fixes

* fix types

* address PR feedback

* fix casing inconsistency

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "jsx": "react-jsx",
     "plugins": [{"name": "typescript-plugin-css-modules"}]
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "scripts/**/*"]
 }
