--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "lib"
   ],
   "scripts": {
+    "build:css-vars": "ts-node --skipIgnore ./scripts/build-css-variables.ts",
     "build:types": "tsc --project tsconfig.build.json",
-    "build": "npm run build:css-types && npm run clean && webpack",
-    "build:storybook": "build-storybook",
+    "build": "npm run clean && npm run build:css-types && npm run build:css-vars && webpack",
+    "build:storybook": "npm run build && build-storybook",
     "build:css-types": "tcm -p 'src/**/*.css' .",
     "check": "tsc --noEmit",
     "clean": "rm -rf lib",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
     "release": "npm run build && changeset publish",
-    "start": "npm run start:css-types & start-storybook -p 6006",
+    "start": "npm run build &&  start-storybook -p 6006",
     "start:css-types": "tcm -w -p 'src/**/*.css' .",
     "test": "jest"
   },
@@ -42,6 +43,8 @@
     "@changesets/changelog-github": "^0.4.3",
     "@changesets/cli": "^2.21.0",
     "@github/prettier-config": "^0.0.4",
+    "@primer/octicons-react": "^17.0.0",
+    "@primer/primitives": "^7.5.1",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-interactions": "^6.4.19",
@@ -74,6 +77,7 @@
     "style-loader": "^3.3.1",
     "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.7",
+    "ts-node": "^10.7.0",
     "typed-css-modules": "^0.7.0",
     "typescript": "^4.5.3",
     "typescript-plugin-css-modules": "^3.4.0",
