--- a/.github/workflows/deploy_storybook_preview.yml
+++ b/.github/workflows/deploy_storybook_preview.yml
@@ -1,9 +1,7 @@
-name: Build & Deploy Storybook to Pages
+name: Build & Deploy Storybook Preview to Pages
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
 
 permissions:
   contents: read
@@ -11,15 +9,17 @@ permissions:
   id-token: write
 
 jobs:
-  build_prod_storybook:
+  build_preview:
     runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Checkout main
-        if: ${{ github.event_name != 'pull_request_target' }}
+      - name: Checkout PR
         uses: actions/checkout@v2
+        with:
+          ref: ${{github.event.pull_request.head.ref}}
+          repository: ${{github.event.pull_request.head.repo.full_name}}
 
       - name: Set up Node
         uses: actions/setup-node@v2
@@ -49,9 +49,9 @@ jobs:
           name: github-pages
           path: artifact.tar
 
-  deploy_prod_storybook:
+  deploy_preview:
     runs-on: ubuntu-latest
-    needs: build_prod_storybook
+    needs: build_preview
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -60,4 +60,4 @@ jobs:
         id: deployment
         uses: paper-spa/deploy-pages@main
         with:
-          preview: false
+          preview: true
