--- a/.github/workflows/deploy_storybook.yml
+++ b/.github/workflows/deploy_storybook.yml
@@ -1,89 +1,63 @@
-# name: Deploy Storybook to Azure
-# on:
-#   push:
+name: Build & Deploy Storybook to Pages
 
-# jobs:
-#   build_and_deploy:
-#     name: Build and deploy
-#     runs-on: ubuntu-latest
-#     concurrency:
-#       group: ${{ github.workflow }}-${{ github.ref }}
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v2
+on:
+  push:
+    branches:
+      - main
 
-#       - name: Set up Node
-#         uses: actions/setup-node@v2
-#         with:
-#           node-version: '14'
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
-#       - name: Cache dependencies
-#         uses: actions/cache@v2
-#         with:
-#           path: ~/.npm
-#           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-#           restore-keys: |
-#             ${{ runner.os }}-node-
+jobs:
+  build_prod_storybook:
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Checkout main
+        if: ${{ github.event_name != 'pull_request_target' }}
+        uses: actions/checkout@v2
 
-#       - name: Install dependencies
-#         run: npm ci
+      - name: Set up Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
 
-#       - name: Build Storybook
-#         run: npm run build:storybook
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-#       - name: Tmp
-#         run: |
-#           echo $GITHUB_REF_NAME
-#           echo $GITHUB_REF_NAME == 'main'
-#           if [$GITHUB_REF_NAME == 'main']
-#           then
-#               echo Production
-#           else
-#               echo Preview
-#           fi
+      - name: Install dependencies
+        run: npm ci
 
-#       - name: Set deployment environment
-#         id: deployment-env
-#         run: |
-#           if [$GITHUB_REF_NAME == 'main']
-#           then
-#               echo "::set-output name=environment::Production"
-#           else
-#               echo "::set-output name=environment::Preview"
-#           fi
+      - name: Attempt build storybook
+        run: npm run build:storybook
 
-#       - name: Create GitHub deployment
-#         uses: chrnorm/deployment-action@v1.2.0
-#         id: deployment
-#         with:
-#           token: ${{ secrets.GITHUB_TOKEN }}
-#           environment: ${{ steps.deployment-env.outputs.environment }}
+      - name: Archive build output
+        run: 'tar --dereference --directory storybook-static/ -cvf artifact.tar .'
 
-#       - name: Deploy to Azure
-#         id: azure-action
-#         uses: Azure/static-web-apps-deploy@v1
-#         with:
-#           azure_static_web_apps_api_token: ${{ secrets.AZURE_DEPLOYMENT_TOKEN }}
-#           repo_token: ${{ secrets.GITHUB_TOKEN }}
-#           action: 'upload'
-#           app_location: '/storybook-static'
-#           output_location: ''
-#           skip_app_build: true
+      - name: Upload artifact
+        uses: actions/upload-artifact@main
+        with:
+          name: github-pages
+          path: artifact.tar
 
-#       - name: Update deployment status (success)
-#         if: success()
-#         uses: chrnorm/deployment-status@releases/v1
-#         with:
-#           token: ${{ secrets.GITHUB_TOKEN }}
-#           environment_url: ${{ steps.azure-action.outputs.static_web_app_url }}
-#           target_url: ${{ steps.azure-action.outputs.static_web_app_url }}
-#           state: 'success'
-#           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
-
-#       - name: Update deployment status (failure)
-#         if: failure()
-#         uses: chrnorm/deployment-status@releases/v1
-#         with:
-#           token: ${{ secrets.GITHUB_TOKEN }}
-#           state: 'failure'
-#           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+  deploy_prod_storybook:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: paper-spa/deploy-pages@main
+        with:
+          preview: false
