--- a/.github/workflows/deploy_storybook_preview.yml
+++ b/.github/workflows/deploy_storybook_preview.yml
@@ -51,7 +51,7 @@ jobs:
 
   deploy_preview:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build_preview
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
