--- a/.github/workflows/deploy_storybook.yml
+++ b/.github/workflows/deploy_storybook.yml
@@ -12,6 +12,7 @@ permissions:
 
 jobs:
   build_prod_storybook:
+    name: Build production Storybook
     runs-on: ubuntu-latest
     environment:
       name: github-pages
@@ -50,6 +51,7 @@ jobs:
           path: artifact.tar
 
   deploy_prod_storybook:
+    name: Deploy production Storybook
     runs-on: ubuntu-latest
     needs: build_prod_storybook
     environment:
