--- a/.github/workflows/deploy_storybook_preview.yml
+++ b/.github/workflows/deploy_storybook_preview.yml
@@ -10,6 +10,7 @@ permissions:
 
 jobs:
   build_preview:
+    name: Build preview Storybook
     runs-on: ubuntu-latest
     environment:
       name: github-pages
@@ -50,6 +51,7 @@ jobs:
           path: artifact.tar
 
   deploy_preview:
+    name: Deploy preview Storybook
     runs-on: ubuntu-latest
     needs: build_preview
     environment:
