--- a/.github/workflows/deploy_storybook.yml
+++ b/.github/workflows/deploy_storybook.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy Storybook to Pages
+name: Deploy Storybook to production
 
 on:
   push:
@@ -12,11 +12,10 @@ permissions:
 
 jobs:
   build_prod_storybook:
-    name: Build production Storybook
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout main
-        if: ${{ github.event_name != 'pull_request_target' }}
         uses: actions/checkout@v2
 
       - name: Set up Node
@@ -35,7 +34,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Attempt build storybook
+      - name: Build storybook
         run: npm run build:storybook
 
       - name: Archive build output
@@ -48,7 +47,7 @@ jobs:
           path: artifact.tar
 
   deploy_prod_storybook:
-    name: Deploy production Storybook
+    name: Deploy
     runs-on: ubuntu-latest
     needs: build_prod_storybook
     environment:
