--- a/.github/workflows/deploy_storybook_preview.yml
+++ b/.github/workflows/deploy_storybook_preview.yml
@@ -9,7 +9,7 @@ permissions:
   id-token: write
 
 jobs:
-  build_preview:
+  build:
     name: Build
     runs-on: ubuntu-latest
     steps:
@@ -47,10 +47,10 @@ jobs:
           name: github-pages
           path: artifact.tar
 
-  deploy_preview:
+  deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: build_preview
+    needs: build
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
