--- a/.github/workflows/deploy_storybook_preview.yml
+++ b/.github/workflows/deploy_storybook_preview.yml
@@ -15,9 +15,6 @@ jobs:
     steps:
       - name: Checkout PR
         uses: actions/checkout@v2
-        with:
-          ref: ${{github.event.pull_request.head.ref}}
-          repository: ${{github.event.pull_request.head.repo.full_name}}
 
       - name: Set up Node
         uses: actions/setup-node@v2
@@ -35,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Attempt build storybook
+      - name: Build storybook
         run: npm run build:storybook
 
       - name: Archive build output
