--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     }
   },
   "extends": [
+    "plugin:react/jsx-runtime",
     "plugin:react/recommended",
     "plugin:jsx-a11y/recommended",
     "plugin:react-hooks/recommended",
@@ -37,10 +38,14 @@
   "settings": {
     "react": {
       "version": "detect"
+    },
+    "import/resolver": {
+      "typescript": {} // this loads <rootdir>/tsconfig.json to eslint
     }
   },
   // rules which apply to JS, TS, etc.
   "rules": {
+    "filenames/match-regex": 0,
     "react/prop-types": 0,
     "react/display-name": 0,
     "react-hooks/exhaustive-deps": "error",
@@ -67,6 +72,7 @@
         "import/no-namespace": 0,
         "no-shadow": 0,
         "import/no-commonjs": 0,
+        "import/no-nodejs-modules": 0,
         "no-unused-vars": [
           "error",
           {
@@ -83,15 +89,37 @@
       "files": ["**/*.{ts,tsx}"],
       "extends": ["plugin:@typescript-eslint/recommended"],
       "rules": {
+        "no-shadow": "off",
+        "@typescript-eslint/no-shadow": "error",
         "@typescript-eslint/no-explicit-any": 2,
         "@typescript-eslint/no-unnecessary-condition": 2,
         "@typescript-eslint/explicit-module-boundary-types": 0,
         "@typescript-eslint/no-unused-vars": [
           "error",
           {
-            "argsIgnorePattern": "^_"
+            "argsIgnorePattern": "^_",
+            "ignoreRestSiblings": true
           }
         ]
+      }
+    },
+    // rules which apply only to TS scripts
+    {
+      "files": ["scripts/*.{ts,tsx}"],
+      "rules": {
+        "import/no-nodejs-modules": [
+          "error",
+          {
+            "allow": ["path", "fs"]
+          }
+        ]
+      }
+    },
+    // rules which apply only to TSX tests
+    {
+      "files": ["**/*.test.{ts,tsx}"],
+      "rules": {
+        "i18n-text/no-en": 0
       }
     },
     // rules which apply only to Markdown
