--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Attempt build
+      - name: Run linters
+        run: npm run lint
+
+      - name: Check formatting
+        run: npm run format
+
+      - name: Build
         run: npm run build
 
       - name: Verify types
