--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "build:css-types": "tcm -p 'src/**/*.css' .",
     "check": "tsc --noEmit",
     "clean": "rm -rf lib",
-    "format": "prettier --write '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
+    "format": "prettier --check '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
+    "format:fix": "prettier --write '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
+    "lint": "eslint '**/*.{js,ts,tsx,md,mdx}' --max-warnings=0",
+    "lint:fix": "npm run lint -- --fix",
     "release": "npm run build && changeset publish",
     "start": "npm run build &&  start-storybook -p 6006",
     "start:css-types": "tcm -w -p 'src/**/*.css' .",
@@ -62,8 +65,18 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/webpack": "^4.41.25",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "autoprefixer": "^9.8.8",
     "css-loader": "^5.2.7",
+    "eslint": "^8.12.0",
+    "eslint-plugin-github": "^4.3.6",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-mdx": "^1.17.0",
+    "eslint-plugin-primer-react": "^0.7.4",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-import-resolver-typescript": "^2.7.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "jest-axe": "^6.0.0",
@@ -79,7 +92,7 @@
     "ts-loader": "^9.2.7",
     "ts-node": "^10.7.0",
     "typed-css-modules": "^0.7.0",
-    "typescript": "^4.5.3",
+    "typescript": "^4.6.3",
     "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
