--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -1,7 +1,9 @@
-name: Deploy Storybook Preview to Pages
+name: Deploy Docs to production
 
 on:
-  pull_request:
+  push:
+    branches:
+      - main
 
 permissions:
   contents: read
@@ -13,7 +15,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout PR
+      - name: Checkout main
         uses: actions/checkout@v2
 
       - name: Set up Node
@@ -32,11 +34,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build storybook
-        run: npm run build:storybook
+      - name: Build docs
+        run: npm run build:docs
 
       - name: Archive build output
-        run: 'tar --dereference --directory storybook-static/ -cvf artifact.tar .'
+        run: 'tar --dereference --directory docs/public/ -cvf artifact.tar .'
 
       - name: Upload artifact
         uses: actions/upload-artifact@main
@@ -56,4 +58,4 @@ jobs:
         id: deployment
         uses: paper-spa/deploy-pages@main
         with:
-          preview: true
+          preview: false
