fix breaking build

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "build:css-vars": "ts-node --skipIgnore ./scripts/build-css-variables.ts",
     "build:types": "tsc --project tsconfig.build.json",
     "build": "npm run clean && npm run build:css-types && npm run build:css-vars && webpack",
-    "build:storybook": "npm run build && build-storybook",
-    "build:docs": "pushd docs && npm run build && popd",
+    "build:storybook": "scripts/build-storybook",
+    "build:docs": "scripts/build-docs",
     "build:css-types": "tcm -p 'src/**/*.css' .",
     "check": "tsc --noEmit",
     "clean": "rm -rf lib",
@@ -70,6 +70,7 @@
     "@typescript-eslint/parser": "^5.17.0",
     "autoprefixer": "^9.8.8",
     "css-loader": "^5.2.7",
+    "cross-env": "7.0.2",
     "eslint": "^8.12.0",
     "eslint-plugin-github": "^4.3.6",
     "eslint-plugin-jsx-a11y": "^6.5.1",
