--- a/docs/package.json
+++ b/docs/package.json
@@ -4,8 +4,7 @@
   "version": "1.1.0",
   "scripts": {
     "develop": "rm -rf .cache && gatsby develop",
-    "build": "../scripts/build-docs",
-    "build:storybook": "cd ../ && scripts/build-storybook"
+    "build": "cross-env NODE_ENV=production gatsby build --prefix-paths"
   },
   "engines": {
     "node": ">=16",
@@ -26,7 +25,6 @@
     "@primer/octicons-react": "^17.0.0",
     "@primer/react": "^35.1.0",
     "clsx": "^1.1.1",
-    "cross-env": "7.0.2",
     "css-to-string-loader": "^0.1.3",
     "globby": "^11.0.4",
     "minipass": "^2.9.0",
