--- a/docs/package.json
+++ b/docs/package.json
@@ -16,18 +16,15 @@
     "gatsby": "^3.7.2",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-postcss": "^4.14.0",
-    "gatsby-plugin-typescript": "2.10.0",
     "react": "^17.0.2",
     "react-docgen-typescript": "^2.0.0",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "@primer/octicons-react": "^17.0.0",
+    "@primer/react": "^35.1.0"
   },
   "devDependencies": {
-    "@primer/octicons-react": "^17.0.0",
-    "@primer/react": "^35.1.0",
-    "clsx": "^1.1.1",
     "css-to-string-loader": "^0.1.3",
-    "globby": "^11.0.4",
-    "minipass": "^2.9.0",
-    "path-browserify": "^1.0.1"
+    "path-browserify": "^1.0.1",
+    "typescript": "^4.6.3"
   }
 }
