--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "lib"
   ],
   "scripts": {
+    "build": "npm run clean && npm run build:css-types && npm run build:css-vars && webpack",
     "build:css-vars": "ts-node --skipIgnore ./scripts/build-css-variables.ts",
     "build:types": "tsc --project tsconfig.build.json",
-    "build": "npm run clean && npm run build:css-types && npm run build:css-vars && webpack",
     "build:storybook": "scripts/build-storybook",
     "build:docs": "scripts/build-docs",
     "build:css-types": "tcm -p 'src/**/*.css' .",
@@ -34,7 +34,9 @@
     "lint": "eslint '**/*.{js,ts,tsx,md,mdx}' --max-warnings=0",
     "lint:fix": "npm run lint -- --fix",
     "release": "npm run build && changeset publish",
-    "start": "npm run build &&  start-storybook -p 6006",
+    "start": "npm run build && npm run start:storybook & npm run start:docs",
+    "start:storybook": "start-storybook -p 6006",
+    "start:docs": "cd docs && npm run develop",
     "start:css-types": "tcm -w -p 'src/**/*.css' .",
     "test": "jest"
   },
