--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "lib"
   ],
   "scripts": {
+    "build": "npm run clean && npm run build:css-types && npm run build:css-vars && webpack",
     "build:css-vars": "ts-node --skipIgnore ./scripts/build-css-variables.ts",
     "build:types": "tsc --project tsconfig.build.json",
-    "build": "npm run clean && npm run build:css-types && npm run build:css-vars && webpack",
-    "build:storybook": "npm run build && build-storybook",
+    "build:storybook": "scripts/build-storybook",
+    "build:docs": "scripts/build-docs",
     "build:css-types": "tcm -p 'src/**/*.css' .",
     "check": "tsc --noEmit",
     "clean": "rm -rf lib",
@@ -32,8 +33,11 @@
     "format:fix": "prettier --write '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
     "lint": "eslint '**/*.{js,ts,tsx,md,mdx}' --max-warnings=0",
     "lint:fix": "npm run lint -- --fix",
+    "postinstall": "cd docs && npm i",
     "release": "npm run build && changeset publish",
-    "start": "npm run build &&  start-storybook -p 6006",
+    "start": "npm run build && npm run start:storybook & npm run start:docs",
+    "start:storybook": "start-storybook -p 6006",
+    "start:docs": "cd docs && npm run develop",
     "start:css-types": "tcm -w -p 'src/**/*.css' .",
     "test": "jest"
   },
@@ -69,6 +73,7 @@
     "@typescript-eslint/parser": "^5.17.0",
     "autoprefixer": "^9.8.8",
     "css-loader": "^5.2.7",
+    "cross-env": "7.0.2",
     "eslint": "^8.12.0",
     "eslint-plugin-github": "^4.3.6",
     "eslint-plugin-jsx-a11y": "^6.5.1",
