--- a/.github/workflows/deploy_docs_preview.yml
+++ b/.github/workflows/deploy_docs_preview.yml
@@ -1,9 +1,7 @@
-name: Deploy Storybook to production
+name: Deploy docs preview to Pages
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
 
 permissions:
   contents: read
@@ -15,7 +13,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout main
+      - name: Checkout PR
         uses: actions/checkout@v2
 
       - name: Set up Node
@@ -34,11 +32,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build storybook
-        run: npm run build:storybook
+      - name: Build library
+        run: npm run build
+
+      - name: Build docs
+        run: npm run build:docs
 
       - name: Archive build output
-        run: 'tar --dereference --directory storybook-static/ -cvf artifact.tar .'
+        run: 'tar --dereference --directory docs/public -cvf artifact.tar .'
 
       - name: Upload artifact
         uses: actions/upload-artifact@main
@@ -58,4 +59,4 @@ jobs:
         id: deployment
         uses: paper-spa/deploy-pages@main
         with:
-          preview: false
+          preview: true
