--- a/.github/workflows/deploy_docs_preview.yml
+++ b/.github/workflows/deploy_docs_preview.yml
@@ -12,7 +12,7 @@ jobs:
   deploy:
     uses: primer/.github/.github/workflows/deploy_preview.yml@main
     with:
-      node-version: 16
+      node_version: 16
       name: Deploy docs preview to Pages
       build: npm run build && npm run build:docs
       output_dir: docs/public/
