--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build:types": "tsc --project tsconfig.build.json",
     "build:storybook": "scripts/build-storybook",
     "build:docs": "scripts/build-docs",
+    "build:docs:preview": "scripts/build-docs preview",
     "build:css-types": "tcm -p 'src/**/*.css' .",
     "check": "tsc --noEmit",
     "clean": "rm -rf lib",
