--- a/.github/workflows/check_for_changeset.yml
+++ b/.github/workflows/check_for_changeset.yml
@@ -10,6 +10,8 @@ on:
       # For `skip-label` only.
       - 'labeled'
       - 'unlabeled'
+    branches-ignore:
+      - '**' ## temporarily disabling as the workflow is consistently failing
 
 jobs:
   check-for-changeset:
